Fixed UI bugs & Add README