@@ -1,44 +1,93 @@
-# Vehler
-Vehler is a Vehicle Management System built in Java using Microsoft Access as the backend database and SQL for queries.
 
-The aim of this project was to develop an offline application that could manage vehicles, drivers as well as the passengers could book the rides.
 
-## Modules:
+<h1 align="center">
+    THE VEHICO 
+</h1>
 
-There are mainly 5 modules in this project.
-#### Vehicle Management
-Admin can add new vehicles, and manage them.
-#### Driver Management
-A new driver can sign up, pick up the kind of vehicle he drives and he'll be alloted a vehicle according to his selection. He can then turn his status as online and start picking rides.
-#### Passenger Management
-New passengers can sign up and login into the system to book rides. They can book a ride, check their current rides and also past rides.
-#### Rides Management
-Admin can manage the rides going on. An admin can even ban a driver.
-#### Booking Ride
-Ride booking is done by the passengers where they can choose from 3 types of vehicles i.e. Bus, Rickshaw and Car. They have to select the routes and begin the travelling.
+<h3 align="center">A Vehicle Management System for Vehicles, Drivers & Passengers.</h3>
 
-## How to set up Project
+---
 
-It's very simple. This project is developed using NetBeans. 
+# Abstract
+
+<h4> Vehico is a Vehicle Management System built in Java using MySQL for queries. </h4>
+<br>
+
+* The aim of this project was to develop an application that could manage vehicles, drivers as well as the passengers.
+* It supports multiple vehicle (Car, Rickshaw, Bus) features and functionalities.
+* Allows passengers to book car/rickshaw/bus ride.
+* Google Maps Integration helps in entering Source and Destination.
+* Also, route/path between source and destination can be viewed for different vehicles.
+* Keeps accurate records for any type of vehicle.
+* Keeps track of Driver, Passengers and other employee ledgers.
+
+# Tech Stack
+
+* Java Swing (NetBeans v12.1)
+* JDBC for `PHPMyAdmin (MySQL)` Connectivity
+* SQL (queries)
+
+
+# Dependencies
+
+* NetBeans
+* MySQL
+* JavaFX-SDK-16
+
+# Getting Started
+
 * Install Netbeans
+* Install JavaFX-SDK-16
 * Import this project 
-* Add the libraries that are given in the Libraries Folder.
-* Admin account username: adeel619
-  Admin account password : 9901
+* Add the [Libraries](https://drive.google.com/file/d/1sHFpGZNLdyLHYaJo7zziz5VwzIE07ymL/view?usp=sharing).
+* Also add Libraries from `lib` folder after installing `JavaFX-SDK-16`. 
 
-## Screenshots
+* Add ***```--module-path "PATH to lib folder in JavaFX-SDK-16"``` <br>
+    ```--add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.media,javafx.swing```***.
+
+* Open the file **[`DbConnection.java`](https://github.com/aarpit1010/DBMS-Cab-Management-System/blob/main/src/Vehico/DbConnection.java)**, alter URL depending upon your MySQL Server, Username and Password.
+* Database (SQL file) is present in **[`/Database`](https://github.com/aarpit1010/DBMS-Cab-Management-System/tree/main/DataBase)** folder.
+* Admin account username: **`1`** <br>
+  Admin account password : **`y`**
+* For Driver & Passenger, register and proceed.
+
+# Modules
+
+There are mainly 3 modules in this project.
+
+### Vehicle Management
+
+* Add Vehicle
+* Manage Vehicle Details
+* Delete Vehicle 
+* Ban Driver
+* View Rides History
+* Vehicle Repair History
+* Manage Fuel Price
+
+
+### Driver Management
+
+* Upon signing up, driver selects the kind of vehicle he/she drives and are alloted a vehicle (if vacant).
+* Option for turning ride status as online and start picking rides.
+* View Previous Rides
+* Check for Current Ride and update ride status (AtPickup / Running / Completed).
+* On completion of ride, distance is noted and Bill is calculated. 
+
+### Passenger Management
+
+* Passengers need to sign up, and login thereafter.
+* Upon logging in, they can Book Car / Rickshaw / Bus Rides.
+* From the **Google Maps** (integrated), they can enter `From` and `To` locations and begin the ride.
+* Directions are available via Google Maps for various vehicle routes.
+* Car & Driver Details can be viewed anytime.
+* Passengers Ride History
+
+
+# Screenshots
 <img src="vehler_screenshots/1.png" />
 <img src="vehler_screenshots/15.png" />
 <img src="vehler_screenshots/3.png" />
-<img src="vehler_screenshots/4.png" />
-<img src="vehler_screenshots/6.png" />
-<img src="vehler_screenshots/16.png" />
-<img src="vehler_screenshots/24.png" />
-<img src="vehler_screenshots/31.png" />
-<img src="vehler_screenshots/40.png" />
-<img src="vehler_screenshots/42.png" />
-<img src="vehler_screenshots/44.png" />
-
 
 
 
